SERVER-14799 hint for a count allows hint to be specified as a document