jstests/core/count_hint.js
@@ -18,3 +18,9 @@ t.ensureIndex( { x:1 }, { sparse:true } );
 
 assert.eq( 0, t.find( { i: 1 } ).hint( "x_1" ).count(), "C" );
 assert.eq( 2, t.find().hint( "x_1" ).count(), "D" );
+
+// SERVER-14799: Should be able to pass the hint as a document (not only as a string).
+assert.eq( 0, t.find( { i: 1 } ).hint( { x: 1 } ).count(), "E" );
+assert.eq( 2, t.find().hint( { x: 1 } ).count(), "F" );
+assert.eq( 1, t.find( { i: 1 } ).hint( { _id: 1 } ).count(), "G" );
+assert.throws( function() { t.find( { i: 1 } ).hint( { bad: 1, hint: 1 } ).count(); } );
